Add DreamHost profile
Former-commit-id: e3a2c1538fd6d9e22ac4b5ca889e7efb27fb901a

--- a/.gitattributes
+++ b/.gitattributes
@@ -2055,6 +2055,7 @@ pl.lproj/Status.strings -text svneol=unset#text/utf-16
 pl.lproj/Transfer.strings -text svneol=unset#text/utf-16
 profiles/Azure.cyberduckprofile -text
 profiles/Cloud.ca[!!-~]Object[!!-~]Store[!!-~]East-1[!!-~]Region.cyberduckprofile -text
+profiles/Dream Objects.cyberduckprofile -text
 profiles/Dunkel[!!-~]Cloud[!!-~]Storage.cyberduckprofile -text
 profiles/GreenQloud.cyberduckprofile -text
 profiles/HP[!!-~]Cloud[!!-~]Object[!!-~]Storage.cyberduckprofile -text
