--- a/Info.plist
+++ b/Info.plist
@@ -201,6 +201,8 @@
             <string>1.5+</string>
             <key>StartOnMainThread</key>
             <true/>
+            <key>WorkingDirectory</key>
+            <string>$APP_PACKAGE/Contents/Resources/Java</string>
             <key>VMOptions</key>
             <string>-Xmx512m -Djava.library.path=$APP_PACKAGE/Contents/Resources/Java -Djna.boot.library.path=$APP_PACKAGE/Contents/Resources/Java -Djna.library.path=$APP_PACKAGE/Contents/Resources/Java -Djna.nounpack=true -Djava.awt.headless=true -Dsun.jnu.encoding=utf-8 -Dfile.encoding=utf-8 -XX:-UsePerfData -XX:+ReduceSignalUsage -Xincgc -XX:-UseLoopPredicate -XX:-OptimizeStringConcat</string>
         </dict>
