New launcher using JLI_Launch.
Former-commit-id: fa4159678813601d762609c3f49f62d81d17f291

--- a/.gitattributes
+++ b/.gitattributes
@@ -2575,6 +2575,7 @@ source/ch/cyberduck/ui/cocoa/delegate/URLMenuDelegate.java -text
 source/ch/cyberduck/ui/cocoa/foundation/NSCoder.java -text
 source/ch/cyberduck/ui/cocoa/foundation/NSKeyedUnarchiver.java -text
 source/ch/cyberduck/ui/cocoa/main.c -text
+source/ch/cyberduck/ui/cocoa/main.m -text
 source/ch/cyberduck/ui/cocoa/quicklook/QLPreviewPanel.h -text
 source/ch/cyberduck/ui/cocoa/quicklook/QuickLook.h -text
 source/ch/cyberduck/ui/cocoa/quicklook/QuickLook.m -text
