--- a/build.xml
+++ b/build.xml
@@ -70,7 +70,6 @@
     </path>
 
     <path id="build.classpath">
-        <pathelement location="/System/Library/Java"/>
         <fileset dir="${lib}">
             <include name="*.jar"/>
         </fileset>
@@ -82,8 +81,6 @@
     <taskdef name="junit" classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask">
         <classpath refid="build.classpath"/>
     </taskdef>
-
-    <taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml"/>
 
     <target name="init">
         <echo message="ant version:	  ${ant.version}"/>
@@ -242,7 +239,12 @@
         </junitreport>
     </target>
 
+    <taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml"/>
+
     <target name="sonar" depends="build">
+        <property name="sonar.projectName" value="${app.name}" />
+        <property name="sonar.projectKey" value="ch.cyberduck:cyberduck" />
+        <property name="sonar.projectVersion" value="${svn.revision}" />
         <property name="sonar.sources" value="${source}"/>
         <property name="sonar.tests" value="${unittests}"/>
         <property name="sonar.binaries" value="${build.classes}"/>
@@ -257,6 +259,6 @@
         <property name="sonar.core.codeCoveragePlugin" value="jacoco"/>
         <property name="sonar.dynamicAnalysis" value="reuseReports"/>
         <property name="sonar.jacoco.antTargets" value="test"/>
-        <sonar:sonar key="ch.cyberduck:cyberduck" version="${svn.revision}" xmlns:sonar="antlib:org.sonar.ant"/>
+        <sonar:sonar xmlns:sonar="antlib:org.sonar.ant"/>
     </target>
 </project>
