Former-commit-id: 62aebbaf7e28e18e3cac3fb8161c8ef9bd71aa98

--- a/.gitattributes
+++ b/.gitattributes
@@ -861,6 +861,8 @@ img/general.png -text svneol=unset#image/png
 img/general.tiff -text svneol=unset#image/tiff
 img/general@2x.png -text svneol=unset#image/png
 img/google-icon.png -text svneol=unset#image/png
+img/google-icon.tiff -text
+img/google-icon@2x.png -text svneol=unset#image/png
 img/google.icns -text
 img/google.ico -text
 img/googledrive-icon.png -text svneol=unset#image/png
