--- a/source/ch/cyberduck/Cyberduck.csproj
+++ b/source/ch/cyberduck/Cyberduck.csproj
@@ -202,6 +202,8 @@
     <Compile Include="core\Utils.cs" />
     <Compile Include="core\VirtualFileDataObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ui\controller\ICreateSymlinkPromptView.cs" />
+    <Compile Include="ui\controller\CreateSymlinkController.cs" />
     <Compile Include="ui\controller\GotoController.cs" />
     <Compile Include="ui\controller\IGotoPromptView.cs" />
     <Compile Include="ui\controller\IUpdateView.cs" />
@@ -234,6 +236,12 @@
     </Compile>
     <Compile Include="ui\winforms\controls\VistaMenuOwnerDrawn.cs">
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ui\winforms\CreateSymlinkPromptForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ui\winforms\CreateSymlinkPromptForm.Designer.cs">
+      <DependentUpon>CreateSymlinkPromptForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ui\winforms\GotoPromptForm.cs">
       <SubType>Form</SubType>
@@ -281,6 +289,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ui\winforms\controls\TransferControl.resx">
       <DependentUpon>TransferControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ui\winforms\CreateSymlinkPromptForm.resx">
+      <DependentUpon>CreateSymlinkPromptForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="ui\winforms\CreateFilePromptForm.resx">
