--- a/.gitattributes
+++ b/.gitattributes
@@ -2912,6 +2912,8 @@ sv.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 sv.lproj/Status.strings -text svneol=unset#text/utf-16
 sv.lproj/Transfer.strings -text svneol=unset#text/utf-16
 test/ch/cyberduck/Test.csproj -text
+test/ch/cyberduck/core/importer/com.fivedetails.Bookmarks.plist -text
+test/ch/cyberduck/core/importer/com.panic.Transmit.plist -text svneol=unset#unset
 test/ch/cyberduck/ui/controller/LocalImplTest.cs -text svneol=unset#application/octet-stream
 test/ch/cyberduck/ui/controller/PersistentFormHandlerTest.cs -text
 th.lproj/Alert.nib/classes.nib -text
